// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatResultDetail > API check result > renders markdown output > api-result-detail-md 1`] = `
"# My API Check

| Field | Value |
| --- | --- |
| Status | passing |
| Location | eu-west-1 |
| Response time | 245ms |
| Started | 2025-06-15T12:00:00.000Z |
| Stopped | 2025-06-15T12:00:01.000Z |
| Attempts | 1 |
| Result type | FINAL |
| ID | result-1 |

## Request
\`GET https://api.example.com/health\`

## Response
**200 OK**

\`\`\`json
{"status":"ok","version":"1.2.3"}
\`\`\`

## Timing
| Phase | Duration |
| --- | --- |
| DNS | 5ms |
| TCP | 10ms |
| TLS | 15ms |
| TTFB | 200ms |
| Download | 15ms |
| **Total** | **245ms** |

## Assertions
- STATUS_CODE EQUALS 200
- JSON_BODY.$.status EQUALS ok"
`;

exports[`formatResultDetail > API check result > renders terminal output > api-result-detail-terminal 1`] = `
"My API Check

Status:         passing
Location:       eu-west-1
Response time:  245ms
Started:        2025-06-15 12:00:00 UTC
Stopped:        2025-06-15 12:00:01 UTC
Attempts:       1
Result type:    FINAL
ID:             result-1

REQUEST
Method:         GET
URL:            https://api.example.com/health
Headers:        
  Accept: application/json

RESPONSE
Status:         200 OK
Headers:        
  content-type: application/json
Body:           
  {
    "status": "ok",
    "version": "1.2.3"
  }

TIMING
  DNS:        5ms
  TCP:        10ms
  TLS:        15ms
  TTFB:       200ms
  Download:   15ms
  Total:      245ms

ASSERTIONS
  · STATUS_CODE EQUALS 200
  · JSON_BODY.$.status EQUALS ok"
`;

exports[`formatResultDetail > API check result with requestError and jobLog > renders terminal snapshot > api-result-with-error-terminal 1`] = `
"My API Check

Status:         error
Location:       eu-west-1
Response time:  245ms
Started:        2025-06-15 12:00:00 UTC
Stopped:        2025-06-15 12:00:01 UTC
Attempts:       1
Result type:    FINAL
ID:             result-5

REQUEST
Method:         GET
URL:            https://api.example.com/health
Headers:        
  Accept: application/json
Body:           
  {
    "query": "test",
    "filters": {
      "active": true
    }
  }

RESPONSE
Status:         0 

ASSERTIONS
  · STATUS_CODE EQUALS 200
  · JSON_BODY.$.status EQUALS ok

ERROR
  ECONNREFUSED: Connection refused to https://api.example.com/health

JOB LOG
  INFO Setting up request
  ERROR ECONNREFUSED"
`;

exports[`formatResultDetail > Agentic check result > renders markdown output > agentic-result-detail-md 1`] = `
"# Homepage Health (Agentic)

| Field | Value |
| --- | --- |
| Status | passing |
| Location | us-east-1 |
| Response time | 12.00s |
| Started | 2025-06-15T12:00:00.000Z |
| Stopped | 2025-06-15T12:00:12.000Z |
| Attempts | 1 |
| Result type | FINAL |
| ID | result-7 |

## Agentic Result

### Summary
The homepage loaded successfully and all assertions passed.

### Assertions
| Status | Condition | Expected | Actual |
| --- | --- | --- | --- |
| ✓ | The homepage returns an HTTP 200 status | 200 | 200 |
| ✓ | The page heading is "Checkly" | Checkly | Checkly |

### Suggestions
- **Also verify the pricing page loads** _(configuration)_
  - Prompt fragment: \`After the homepage loads, navigate to /pricing and confirm all plans are visible.\`

### Steps (4)
1. • Starting the check.
2. → \`http_request\`
3. ← \`http_request\`
4. • Homepage loaded, verifying heading."
`;

exports[`formatResultDetail > Agentic check result > renders terminal output > agentic-result-detail-terminal 1`] = `
"Homepage Health (Agentic)

Status:         passing
Location:       us-east-1
Response time:  12.00s
Started:        2025-06-15 12:00:00 UTC
Stopped:        2025-06-15 12:00:12 UTC
Attempts:       1
Result type:    FINAL
ID:             result-7

AGENTIC RESULT
SUMMARY
  The homepage loaded successfully and all assertions passed.

ASSERTIONS
  ✓ The homepage returns an HTTP 200 status
  ✓ The page heading is "Checkly"

STEPS
  4 steps recorded
    1 • Starting the check.
    2 → http_request
    3 ← http_request
    4 • Homepage loaded, verifying heading.

SUGGESTIONS
  ◆ Also verify the pricing page loads [configuration]"
`;

exports[`formatResultDetail > Browser check result > renders markdown output > browser-result-detail-md 1`] = `
"# Failing Browser Check

| Field | Value |
| --- | --- |
| Status | failing |
| Location | us-east-1 |
| Response time | 5.20s |
| Started | 2025-06-15T12:00:00.000Z |
| Stopped | 2025-06-15T12:00:05.000Z |
| Attempts | 1 |
| Result type | FINAL |
| ID | result-2 |

## Browser Result (playwright)

### Web Vitals
| Metric | Value | Score |
| --- | --- | --- |
| LCP | 1.20s | GOOD |
| FCP | 800ms | GOOD |
| CLS | 0.150 | NEEDS_IMPROVEMENT |
| TBT | 600ms | POOR |
| TTFB | 120ms | GOOD |

### Errors
- TimeoutError: page.click: Timeout 30000ms exceeded"
`;

exports[`formatResultDetail > Browser check result > renders terminal output > browser-result-detail-terminal 1`] = `
"Failing Browser Check

Status:         failing
Location:       us-east-1
Response time:  5.20s
Started:        2025-06-15 12:00:00 UTC
Stopped:        2025-06-15 12:00:05 UTC
Attempts:       1
Result type:    FINAL
ID:             result-2

BROWSER RESULT
Framework:      playwright
Runtime:        2024.02
Errors:         2 console, 1 network

ERRORS
  TimeoutError: page.click: Timeout 30000ms exceeded

WEB VITALS
  LCP:    1.20s good
  FCP:    800ms good
  CLS:    0.150 needs improvement
  TBT:    600ms poor
  TTFB:   120ms good

JOB LOG
  INFO Starting browser check
  ERROR TimeoutError: page.click: Timeout 30000ms exceeded

ASSETS
  1 screenshot(s), 1 trace(s), 1 video(s)
  Use --output json to get asset URLs"
`;

exports[`formatResultDetail > Multi-step check result > renders terminal output > multistep-result-detail-terminal 1`] = `
"Multi-Step Checkout Flow

Status:         error
Location:       ap-southeast-1
Response time:  8.00s
Started:        2025-06-15 12:00:00 UTC
Stopped:        2025-06-15 12:00:08 UTC
Attempts:       2
Result type:    FINAL
ID:             result-3

MULTI-STEP RESULT
Runtime:        2024.02

ERRORS
  Error: Payment step failed
  AssertionError: Expected cart total to match

JOB LOG
  INFO Step 1: Navigate to homepage
  INFO Step 2: Add item to cart
  INFO Step 3: Checkout
  ERROR Error: Payment step failed

ASSETS
  1 screenshot(s), 1 trace(s)
  Use --output json to get asset URLs"
`;

exports[`formatResultDetail > SSL check result > renders markdown snapshot > ssl-result-detail-md 1`] = `
"# SSL certificate expiry

| Field | Value |
| --- | --- |
| Status | failing |
| Location | eu-west-1 |
| Response time | 48ms |
| Started | 2025-06-15T12:00:00.000Z |
| Stopped | 2025-06-15T12:00:01.000Z |
| Attempts | 1 |
| Result type | FINAL |
| ID | result-ssl-1 |

## SSL Result
- **TLS:** TLS 1.3 / TLS_AES_256_GCM_SHA384
- **Expires in:** expired 5 day(s) ago
- **Handshake:** 48ms
- **Chain trusted:** no
- **Hostname verified:** no
- **Baseline:** FAIL grade C
- **Failure:** expired

## Certificate
- **Subject CN:** expired.example.com
- **Issuer CN:** Example Issuing CA
- **Valid:** 2026-01-01T00:00:00Z → 2026-07-01T00:00:00Z
- **Key:** ECDSA 256-bit
- **Signature:** ECDSA-SHA256
- **SHA-256:** \`beab14cf39678fda0ef1606eedb818c2298ba2cc7a00886e7dc2d2410f24cd35\`
- **SANs:** expired.example.com, www.expired.example.com
- **Serial:** 35428337808578903465180920265426569102
- **OCSP stapled:** no

## Security Baseline
- ✔ min TLS version (fail)
- ✔ min key size (fail)
- ✔ weak signature algorithm (fail)
- ✖ weak cipher suite (fail)
- ✔ known bad CA (fail)
- ✔ recommended TLS version (ignore)
- ✔ recommended key size (ignore)
- ✔ OCSP must-staple respected (ignore)
- ✔ SCT present (ignore)

## Assertions
- ✖ CERT_EXPIRES_IN_DAYS is greater than target "99999". Received: 52.
- ✔ CERT_NOT_EXPIRED equals target "true". Received: true."
`;

exports[`formatResultDetail > SSL check result > renders terminal snapshot > ssl-result-detail-terminal 1`] = `
"SSL certificate expiry

Status:         failing
Location:       eu-west-1
Response time:  48ms
Started:        2025-06-15 12:00:00 UTC
Stopped:        2025-06-15 12:00:01 UTC
Attempts:       1
Result type:    FINAL
ID:             result-ssl-1

SSL RESULT
Resolved IP:    203.0.113.30
TLS:            TLS 1.3 / TLS_AES_256_GCM_SHA384
Expires in:     expired 5 day(s) ago
Handshake:      48ms
Chain trusted:  no
Hostname:       no
Baseline:       FAIL grade C
Failure:        expired

CERTIFICATE
Subject CN:     expired.example.com
Issuer CN:      Example Issuing CA
Valid:          2026-01-01T00:00:00Z → 2026-07-01T00:00:00Z
Key:            ECDSA 256-bit
Signature:      ECDSA-SHA256
SHA-256:        beab14cf39678fda0ef1606eedb818c2298ba2cc7a00886e7dc2d2410f24cd35
SANs:           expired.example.com, www.expired.example.com
Serial:         35428337808578903465180920265426569102
OCSP stapled:   no

SECURITY BASELINE
  ✔ min TLS version (fail)
  ✔ min key size (fail)
  ✔ weak signature algorithm (fail)
  ✖ weak cipher suite (fail)
  ✔ known bad CA (fail)
  ✔ recommended TLS version (ignore)
  ✔ recommended key size (ignore)
  ✔ OCSP must-staple respected (ignore)
  ✔ SCT present (ignore)

ASSERTIONS
  ✖ CERT_EXPIRES_IN_DAYS is greater than target "99999". Received: 52.
  ✔ CERT_NOT_EXPIRED equals target "true". Received: true."
`;

exports[`formatResultDetail > Traceroute check result > renders markdown snapshot > traceroute-result-detail-md 1`] = `
"# Traceroute to unreachable host

| Field | Value |
| --- | --- |
| Status | failing |
| Location | eu-west-1 |
| Response time | 1.00s |
| Started | 2025-06-15T12:00:00.000Z |
| Stopped | 2025-06-15T12:00:01.000Z |
| Attempts | 1 |
| Result type | FINAL |
| ID | result-tr-1 |

## Traceroute Result
- **Destination:** unreachable.example.com (203.0.113.10)
- **Probe protocol:** ICMP
- **Hops:** 30
- **Reached:** no
- **Truncated:** max-hops
- **Final hop:** avg 24ms / best 22ms / worst 31ms

## Timing
- **DNS:** 2ms

## Assertions
- ✖ latency property "avg" is less than target "20". Received: 24.1.
- ✔ response time is less than target "5000". Received: 1000."
`;

exports[`formatResultDetail > Traceroute check result > renders terminal snapshot > traceroute-result-detail-terminal 1`] = `
"Traceroute to unreachable host

Status:         failing
Location:       eu-west-1
Response time:  1.00s
Started:        2025-06-15 12:00:00 UTC
Stopped:        2025-06-15 12:00:01 UTC
Attempts:       1
Result type:    FINAL
ID:             result-tr-1

TRACEROUTE RESULT
Destination:    unreachable.example.com (203.0.113.10)
Protocol:       TCP
Probe protocol: ICMP
Hops:           30
Reached:        no
Truncated:      max-hops
Final hop:      avg 24ms / best 22ms / worst 31ms

HOPS
   1  10.0.0.1 (gateway.local)  loss 0%  rtt avg 1ms / best 1ms / worst 2ms
   2  198.51.100.5  loss 100%  AS64500

TIMING
DNS:            2ms

ASSERTIONS
  ✖ latency property "avg" is less than target "20". Received: 24.1.
  ✔ response time is less than target "5000". Received: 1000."
`;

exports[`formatResultDetail > gRPC check result > renders markdown snapshot > grpc-result-detail-md 1`] = `
"# gRPC health probe

| Field | Value |
| --- | --- |
| Status | failing |
| Location | eu-west-1 |
| Response time | 90ms |
| Started | 2025-06-15T12:00:00.000Z |
| Stopped | 2025-06-15T12:00:01.000Z |
| Attempts | 1 |
| Result type | FINAL |
| ID | result-grpc-1 |

## gRPC Result
- **Status:** 14 connection refused
- **Health:** NOT_SERVING
- **Method:** grpc.health.v1.Health/Check
- **Discovered methods:** grpc.health.v1.Health/Check, grpc.health.v1.Health/Watch

## Timing
| Phase | Duration |
| --- | --- |
| DNS | 5ms |
| Connect | 40ms |
| **Total** | **90ms** |

## Assertions
- ✖ status code equals target "0". Received: 14.
- ✔ health check status equals target "NOT_SERVING". Received: NOT_SERVING."
`;

exports[`formatResultDetail > gRPC check result > renders terminal snapshot > grpc-result-detail-terminal 1`] = `
"gRPC health probe

Status:         failing
Location:       eu-west-1
Response time:  90ms
Started:        2025-06-15 12:00:00 UTC
Stopped:        2025-06-15 12:00:01 UTC
Attempts:       1
Result type:    FINAL
ID:             result-grpc-1

GRPC RESULT
Target:         grpc.example.com:443
Method:         grpc.health.v1.Health/Check
Mode:           HEALTH
Status:         14 connection refused
Health:         NOT_SERVING
Methods:        grpc.health.v1.Health/Check, grpc.health.v1.Health/Watch
Metadata:       
  content-type: application/grpc

TIMING
DNS:            5ms
Connect:        40ms
Total:          90ms

ASSERTIONS
  ✖ status code equals target "0". Received: 14.
  ✔ health check status equals target "NOT_SERVING". Received: NOT_SERVING."
`;
